--- a/core/res/res/values/cr_strings.xml
+++ b/core/res/res/values/cr_strings.xml
@@ -44,4 +44,8 @@
     <string name="floating_window_snap_right">Snap right</string>
     <string name="floating_window_minimize">Minimize</string>
 
+   <!-- Fingerprint -->
+   <string name="fingerprint_try_again_hint">Please scan again</string>
+   <string name="fingerprint_try_again_hint_too_many">Too many fingerprint attempts. Try again later.</string>
+
 </resources>
